[gd_scene load_steps=20 format=3 uid="uid://ct7eavw7p0ci3"]

[ext_resource type="Script" uid="uid://f6hmn8wpksud" path="res://src/fps/player/player.gd" id="1_player"]
[ext_resource type="Script" uid="uid://b8lpvad5c77ty" path="res://src/fps/player/player_config.gd" id="2_2rfnl"]
[ext_resource type="Script" uid="uid://b13uk5wqouwnt" path="res://src/fps/player/camera_controller.gd" id="2_camera"]
[ext_resource type="Script" uid="uid://wsgw1dajd5pp" path="res://src/fps/player/hands.gd" id="3_hands"]
[ext_resource type="Script" uid="uid://4jr5xlwwag08" path="res://src/fps/player/hand.gd" id="4_hand"]
[ext_resource type="Script" uid="uid://f61ew11slht3" path="res://src/fps/player/state_machine.gd" id="5_statemachine"]
[ext_resource type="Script" uid="uid://dy1m6f6frmbp5" path="res://src/fps/player/states/idle_state.gd" id="6_idle"]
[ext_resource type="Script" uid="uid://d2pakvy5ejen6" path="res://src/fps/player/states/crouching_state.gd" id="7_crouching"]
[ext_resource type="Script" uid="uid://clbofwxm1kmo4" path="res://src/fps/player/states/moving_state.gd" id="7_moving"]
[ext_resource type="Script" uid="uid://cpc6npb1itpx1" path="res://src/fps/player/states/jumping_state.gd" id="8_jumping"]
[ext_resource type="Script" uid="uid://bvkdnl7dyywme" path="res://src/fps/player/states/falling_state.gd" id="9_falling"]
[ext_resource type="Script" uid="uid://ctq2d4m70qqkj" path="res://src/fps/player/states/dashing_state.gd" id="10_dashing"]
[ext_resource type="Script" uid="uid://db6rqh5rrlto" path="res://src/fps/player/states/sliding_state.gd" id="11_sliding"]
[ext_resource type="Script" uid="uid://b28h1qmbh0h7r" path="res://src/fps/player/states/wallrunning_state.gd" id="12_wallrunning"]
[ext_resource type="PackedScene" uid="uid://4epmqkty5xqt" path="res://src/ui/hud.tscn" id="14_ejvt7"]
[ext_resource type="PackedScene" uid="uid://c4qrq5kj8wqt4" path="res://src/ui/pause_menu.tscn" id="15_u15jt"]
[ext_resource type="AudioStream" uid="uid://cfxtnb6hisoi2" path="res://assets/sounds/steps/step0.wav" id="17_phnc4"]

[sub_resource type="Resource" id="Resource_ejvt7"]
script = ExtResource("2_2rfnl")
metadata/_custom_type_script = "uid://b8lpvad5c77ty"

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_v8ymh"]

[node name="Player" type="CharacterBody3D" unique_id=885925266]
script = ExtResource("1_player")
config = SubResource("Resource_ejvt7")

[node name="CollisionShape3D" type="CollisionShape3D" parent="." unique_id=1508081922]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_v8ymh")

[node name="CameraPivot" type="Node3D" parent="." unique_id=843817942]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.8, 0)
script = ExtResource("2_camera")

[node name="Camera3D" type="Camera3D" parent="CameraPivot" unique_id=2057541266]

[node name="InteractRayCast" type="RayCast3D" parent="CameraPivot/Camera3D" unique_id=521890584]
target_position = Vector3(0, 0, -3)

[node name="AudioListener3D" type="AudioListener3D" parent="CameraPivot/Camera3D" unique_id=1854838571]

[node name="Hands" type="Node3D" parent="CameraPivot" unique_id=155881976]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.4, -0.5)
script = ExtResource("3_hands")

[node name="RightHand" type="Node3D" parent="CameraPivot/Hands" unique_id=895620812]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.4, 0, 0)
script = ExtResource("4_hand")

[node name="LeftHand" type="Node3D" parent="CameraPivot/Hands" unique_id=1345695830]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.4, 0, 0)
script = ExtResource("4_hand")
is_right_hand = false

[node name="StateMachine" type="Node" parent="." unique_id=220264041 node_paths=PackedStringArray("initial_state")]
script = ExtResource("5_statemachine")
initial_state = NodePath("IdleState")

[node name="IdleState" type="Node" parent="StateMachine" unique_id=179598140]
script = ExtResource("6_idle")

[node name="CrouchingState" type="Node" parent="StateMachine" unique_id=1313899779]
script = ExtResource("7_crouching")

[node name="MovingState" type="Node" parent="StateMachine" unique_id=657274045]
script = ExtResource("7_moving")

[node name="JumpingState" type="Node" parent="StateMachine" unique_id=1599262072]
script = ExtResource("8_jumping")

[node name="FallingState" type="Node" parent="StateMachine" unique_id=1063851338]
script = ExtResource("9_falling")

[node name="DashingState" type="Node" parent="StateMachine" unique_id=776296371]
script = ExtResource("10_dashing")

[node name="SlidingState" type="Node" parent="StateMachine" unique_id=406982066]
script = ExtResource("11_sliding")

[node name="WallrunningState" type="Node" parent="StateMachine" unique_id=904553156]
script = ExtResource("12_wallrunning")

[node name="CanvasLayer" type="CanvasLayer" parent="." unique_id=1334742802]
follow_viewport_enabled = true

[node name="HUD" parent="CanvasLayer" unique_id=357051303 instance=ExtResource("14_ejvt7")]

[node name="PauseMenu" parent="CanvasLayer" unique_id=200788651 instance=ExtResource("15_u15jt")]
visible = false

[node name="FootstepsPlayer" type="AudioStreamPlayer3D" parent="." unique_id=1274705915]
stream = ExtResource("17_phnc4")
